k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ippool
  labels:
    app: ippool
    component: api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8090
    targetPort: 8090
    protocol: TCP
  selector:
    app: ippool
